<resources>
    <string name="app_name">Inventory</string>
    <string name="logo">App logo.</string>
    <string name="tvUser">Username/e-mail address</string>
    <string name="tvPassword">Password</string>
    <string name="chRemember">Remember me</string>
    <string name="btSignUp"><u>Sign up</u></string>
    <string name="btSignIn">Sign in</string>
    <string name="btSignGoogle">Google</string>
    <string name="btSignFacebook">Login in with Facebook</string>
    <string name="btDependencies">Dependencies</string>
    <string name="btSectors">Sectors</string>
    <string name="btProducts">Products</string>
    <string name="btUserProfile">Profile</string>
    <string name="btSettings">Settings</string>
    <string name="btHelp">Help</string>
    <string name="tvLongName">Long name</string>
    <string name="tvShortName">Short name</string>
    <string name="tvDescription">Description</string>
    <string name="tvImage">Image</string>
    <string name="edLongName">Long name</string>
    <string name="edShortName">Short name</string>
    <string name="tvDependendies">Dependencies</string>
    <string name="edDescription">Description</string>
    <string name="edImage">Image</string>
    <string name="err_msg_short_name_too_long">El nombre corto no puede contener más de 10 caracteres.</string>
    <string name="edName_register">Name</string>
    <string name="edEmail_register">Email</string>
    <string name="edRepeatPassword">Repeat password</string>
    <string name="swNotification">Notify</string>
    <string name="btSignUp_register">Sign up</string>
    <string name="notification_1h">Notificaciones cada 1 hora</string>
    <string name="rbNotification2h">Notificaciones cada 2 horas</string>
    <string name="rbNotification3h">Notificaciones cada 3 horas</string>
    <string name="tvLigthTheme">Activar tema claro</string>
    <string name="swNotifications">Notificaciones</string>
    <string name="tbTheme">Ligth Theme</string>
    <string name="action_dependency_edit">Editar Dependencia</string>

    <!-- ARRAY -->
    <string-array name="entriesDependencies">
        <item>1CFGM</item>
        <item>2GFGM</item>
        <item>1CFGS</item>
        <item>2CFGS</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_account_preferences">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_account_preferences">Account preferences</string>
    <string name="setting_numcolumn_inrecycler_summary">Número de columnas a mostrar.</string>
</resources>

