<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/edName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/edName_register"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableStart="@drawable/ic_action_name"
        android:drawablePadding="@dimen/drawableicon"/>

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:hint="@string/tvPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edEmail"
        app:layout_constraintStart_toStartOf="@+id/edEmail"
        app:layout_constraintTop_toBottomOf="@+id/edEmail"
        android:drawableStart="@drawable/ic_action_password"
        android:drawablePadding="@dimen/drawableicon"/>

    <EditText
        android:id="@+id/edRepeatPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edRepeatPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edPassword"
        app:layout_constraintStart_toStartOf="@+id/edPassword"
        app:layout_constraintTop_toBottomOf="@+id/edPassword"
        android:drawableStart="@drawable/ic_action_password"
        android:drawablePadding="@dimen/drawableicon"/>

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edEmail_register"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/edName"
        app:layout_constraintStart_toStartOf="@+id/edName"
        app:layout_constraintTop_toBottomOf="@+id/edName"
        android:drawableStart="@drawable/ic_action_email"
        android:drawablePadding="@dimen/drawableicon"/>

    <Button
        android:id="@+id/btSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btSignUp_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swNotification" />

    <Switch
        android:id="@+id/swNotification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/swNotification"
        app:layout_constraintEnd_toEndOf="@+id/edRepeatPassword"
        app:layout_constraintStart_toStartOf="@+id/edRepeatPassword"
        app:layout_constraintTop_toBottomOf="@+id/edRepeatPassword" />

</android.support.constraint.ConstraintLayout>