<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/ll_sector_edit_padding"
    tools:context=".SectorEditActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilLongName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiedLongName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edLongName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilShortNamed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="10">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiedShortName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edShortName" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvDependency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDependendies" />

    <Spinner
        android:id="@+id/spDependencies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiedDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edDescription"
            android:lines="5"
            android:gravity="start|top"
            android:inputType="textMultiLine"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content ">

        <EditText
            android:id="@+id/edImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edImage" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/tlDependendyEditFloatingButton"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_save" />
</LinearLayout>