<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DependencyEditActivity"
    android:layout_margin="@dimen/tlDependendyEditMargin"
    android:id="@+id/tlDependencyEditMargin"
    android:stretchColumns="2"
    android:shrinkColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tvLongName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLongName" />

        <EditText
            android:id="@+id/edLongName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_span="2"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tvShortName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvShortName" />

        <EditText
            android:id="@+id/edShortName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvDescription" />

        <EditText
            android:id="@+id/edDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_span="2"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tvImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvImage" />

        <EditText
            android:id="@+id/edImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_search_category_default" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/tlDependendyEditFloatingButton"
            android:layout_span="3"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_menu_edit" />


    </TableRow>

</TableLayout>